/*  * Copyright 2007-2008 Sun Microsystems, Inc.  *  * This file is part of Project Darkstar Server.  *  * Project Darkstar Server is free software: you can redistribute it  * and/or modify it under the terms of the GNU General Public License  * version 2 as published by the Free Software Foundation and  * distributed hereunder to you.  *  * Project Darkstar Server is distributed in the hope that it will be useful,  * but WITHOUT ANY WARRANTY; without even the implied warranty of  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the  * GNU General Public License for more details.  *  * You should have received a copy of the GNU General Public License  * along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
package com.sun.sgs.app.util;

/*
 * TODO: 	- Iterators to check for dirty nodes
 * 			- Iterators to stop during iterations
 */

import java.io.Serializable;
import java.util.AbstractCollection;
import java.util.AbstractList;
import java.util.ArrayList;
import java.util.Collection;
import java.util.Iterator;

import com.sun.sgs.app.AppContext;
import com.sun.sgs.app.DataManager;
import com.sun.sgs.app.ManagedObject;
import com.sun.sgs.app.ManagedReference;
import com.sun.sgs.app.Task;
import com.sun.xml.internal.bind.v2.schemagen.xmlschema.Particle;

/**
 *  This class represents an {@code AbstractCollection} which supports 
 *  concurrency and introduces tools which achieve this. This data 
 *  structure builds upon the AbstractList class by implementing 
 *  methods specific to concurrent operations.<p>
 *  
 *  The class achieves concurrency by partitioning an ordinary
 *  list into a number of smaller lists contained in {@code ListNode}
 *  objects, and joining the nodes as a linked-list. This 
 *  implementation bears similarity to a shallow skip-list in 
 *  that access to arbitrary elements occurs through initially
 *  large jumps, and then through a finer iteration of the
 *  contained list. To allow for this behaviour, each